# marekvs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.debug  Justfile  README.md  crdt-research  implementation-plans.md  licence.md  new_commands.md  production-assessment.md  todo.md
.github/workflows/: docker.yml  pages.yml
bench/: README.md  report.py  run_workloads.sh
crates/docsgen/: Cargo.toml
crates/docsgen/src/: main.rs
crates/docsgen/theme/: site.css  site.js
crates/docsgen/theme/brand/: tokens.css
crates/docsgen/theme/templates/: landing.html  page.html
crates/marekvs-cluster/: Cargo.toml
crates/marekvs-cluster/src/: lib.rs  placement.rs
crates/marekvs-core/: Cargo.toml
crates/marekvs-core/src/: budget.rs  counter.rs  envelope.rs  hlc.rs  ikey.rs  json.rs  lib.rs  merge.rs  pdoc.rs  protohead.rs  score.rs
crates/marekvs-core/tests/: json_laws.rs  merge_laws.proptest-regressions  merge_laws.rs  pdoc_laws.rs
crates/marekvs-engine/: Cargo.toml
crates/marekvs-engine/src/: lib.rs  metrics.rs  pubsub.rs  reply.rs  store.rs  topology.rs
crates/marekvs-engine/src/cmd/: budget.rs  cluster.rs  command_docs.rs  generic.rs  hash.rs  hll.rs  list.rs  mod.rs  proto.rs  pubsub.rs  script.rs  server.rs  set.rs  stream.rs  string.rs  zset.rs
crates/marekvs-engine/src/cmd/json/: doc.rs  mod.rs  path.rs
crates/marekvs-engine/src/cmd/proto/: doc.rs  mod.rs
crates/marekvs-engine/src/proto/: compile.rs  err.rs  fields.rs  mod.rs  path.rs  registry.rs
crates/marekvs-engine/tests/: budget.rs  config_runtime.rs  head_del.rs  json.rs  list_elems.rs  new_commands.rs  proto.rs  proto_crdt.rs
crates/marekvs-operator/: Cargo.toml
crates/marekvs-operator/src/: main.rs  promtext.rs  resources.rs  scale.rs  types.rs
crates/marekvs-proto/: Cargo.toml
crates/marekvs-proto/src/: lib.rs
crates/marekvs-repl/: Cargo.toml
crates/marekvs-repl/src/: ae.rs  lib.rs  mesh.rs  ring.rs
crates/marekvs-resp/: Cargo.toml
crates/marekvs-resp/src/: lib.rs
crates/marekvs-resp/tests/: parser.rs
crates/marekvs-server/: Cargo.toml
crates/marekvs-server/src/: http.rs  main.rs  redisrepl.rs
deploy/: compose.yaml
design/: 00-overview.md  01-architecture.md  02-data-model.md  03-redis-api.md  04-replication.md  05-consistency-anti-entropy.md  06-cluster-membership.md  07-kubernetes.md  08-build-deploy.md  09-performance.md  10-testing.md  11-lua-scripting.md  12-operator.md  13-budget.md  14-mruby-scripting.md  15-cluster-protocol.md  16-json.md  17-protobuf.md  18-proto-field-crdt.md  README.md
docs/: _nav.toml  architecture.md  budget.md  build-deploy.md  cluster-protocol.md  consistency.md  data-model.md  json.md  kubernetes.md  lua-scripting.md  membership.md  operator.md  overview.md  performance.md  protobuf.md  quickstart.md  redis-api.md  replication.md  testing.md
docs/superpowers/plans/: 2026-07-07-cluster-protocol.md
k8s/: README.md  kustomization.yaml  pdb.yaml  services.yaml  statefulset.yaml
k8s/operator/: crd.yaml  deployment.yaml  example-cluster.yaml  kustomization.yaml  rbac.yaml
tests/: apple_cluster.sh  cluster_protocol.sh  cluster_test.sh  incr_repro.sh  local_cluster.sh  preflight.sh  replicaof.sh  smoke.sh  wait_ready.sh
tests/chaos/: DEBUG-PLAN.md  chaos_test.sh  grudge.py  lib.sh
