[package]
name = "marekvs-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
marekvs-core.workspace = true
chitchat.workspace = true
tokio.workspace = true
xxhash-rust.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
