[package]
name = "marekvs-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
marekvs-core.workspace = true
marekvs-resp.workspace = true
ondadb.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
tracing.workspace = true
anyhow.workspace = true
prometheus.workspace = true
xxhash-rust.workspace = true
mlua.workspace = true
sha1_smol.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true
postcard.workspace = true
prost.workspace = true
prost-types.workspace = true
prost-reflect.workspace = true
protox.workspace = true
libc = "0.2"

[dev-dependencies]
tempfile = "3"
prost.workspace = true
prost-reflect.workspace = true
