[package]
name = "marekvs-operator"
description = "Kubernetes operator for marekvs: MarekvsCluster CRD, safe scaling, autoscaling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
kube = { version = "4", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
