[package]
name = "marekvs-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "marekvs-server"
path = "src/main.rs"

[dependencies]
marekvs-core.workspace = true
marekvs-resp.workspace = true
marekvs-proto.workspace = true
marekvs-engine.workspace = true
marekvs-cluster.workspace = true
marekvs-repl.workspace = true
ondadb.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
